--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -14,28 +14,30 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
         working-directory: frontend
 
-      - name: Run TypeScript compiler
+      - name: Build
         run: npm run build
         working-directory: frontend
 
       - name: Run tests
-        run: npm test -- --watchAll=false
+        run: npm test -- --watchAll=false --passWithNoTests
         working-directory: frontend
 
       - name: Upload coverage report
-        if: success()
-        uses: actions/upload-artifact@v2
+        if: success() && hashFiles('frontend/coverage/**') != ''
+        uses: actions/upload-artifact@v4
         with:
           name: coverage
           path: frontend/coverage/
