--- a/backend/src/Formgood.Api/appsettings.json
+++ b/backend/src/Formgood.Api/appsettings.json
@@ -8,16 +8,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:your_server_name.database.windows.net,1433;Initial Catalog=your_database_name;Persist Security Info=False;User ID=your_username;Password=your_password;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": ""
   },
   "Jwt": {
-    "Key": "your_jwt_secret_key",
-    "Issuer": "your_issuer",
-    "Audience": "your_audience"
+    "Key": "",
+    "Issuer": "",
+    "Audience": ""
   },
   "Azure": {
     "BlobStorage": {
-      "ConnectionString": "your_blob_storage_connection_string"
+      "ConnectionString": ""
     }
   }
 }
