--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ yarn-error.log*
 # Node / Frontend
 frontend/node_modules/
 frontend/build/
+frontend/dist/
+frontend/*.tsbuildinfo
 frontend/.cache/
 frontend/coverage/
 
